# shelly-energy-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  _control_test.js  _test.js  config.example.json  live_dashboard.html  pyproject.toml  requirements.txt  start.bat  start.command  start.sh
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: build_release_zips.py
.github/workflows/: release.yml
git/shelly-energy-analyzer/shelly_energy_analyzer_refactored_v5.8.14.38_github_linux_actions_en/: CHANGELOG.md
git/shelly-energy-analyzer/shelly_energy_analyzer_refactored_v5.8.14.39_plot_device_stable/: CHANGELOG.md  README.md
scripts/: check_templates_js.py  rescue.ps1  rescue.sh
shelly_energy_analyzer_refactored_v5.8.14.39_plot_device_stable/: .gitignore  config.example.json  pyproject.toml
shelly_energy_analyzer_refactored_v5.8.14.39_plot_device_stable/src/shelly_analyzer/: __init__.py
shelly_energy_analyzer_refactored_v5.8.14.41_plot_device_stable_fix/: pyproject.toml
src/shelly_analyzer/: __init__.py  __main__.py  i18n.py  updater_helper.py  webview_runner.py
src/shelly_analyzer/core/: csv_read.py  energy.py
src/shelly_analyzer/io/: config.py  database.py  http.py  location.py  logging_setup.py  storage.py
src/shelly_analyzer/services/: ai_advisor.py  anomaly.py  api_v1.py  appliance_detector.py  auto_schedule.py  battery.py  co2_forecast.py  compute.py  demo.py  device_registry.py  discovery.py  electricity_maps.py  email_sender.py  entsoe.py  ev_charger.py  ev_charging_log.py  export.py  forecast.py  gamification.py  (+18 more)
src/shelly_energy_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
updates/staging/: README.md  config.example.json
(+70 files in other folders)
