[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelly-energy-analyzer"
version = "5.8.14.38"
description = "Shelly EM/3EM Energy Analyzer (GUI + Export)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shelly Energy Analyzer Contributors" }]
keywords = ["shelly", "energy", "power", "tkinter", "pandas"]
dependencies = [
  "requests>=2.31",
  "pandas>=2.0",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "reportlab>=4.0",
  "pillow>=10.0",
  "qrcode>=7.4",
  "plotly>=5.18",
  "pywebview>=5.0",
  "zeroconf>=0.131",
]

[project.scripts]
shelly-analyzer = "shelly_analyzer.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
